--- a/project_layout/src/main/resources/templates/fragments/header.html
+++ b/project_layout/src/main/resources/templates/fragments/header.html
@@ -13,15 +13,13 @@
 					aria-haspopup="true" id="navbarDropdown" data-toggle="dropdown"
 					aria-expanded="false"> <img src="production/images/img.jpg"
 						alt="">John Doe
-				</a>
+					</a>
 					<div class="dropdown-menu dropdown-usermenu pull-right"
 						aria-labelledby="navbarDropdown">
-						<a class="dropdown-item" href="javascript:;"> Profile</a> <a
-							class="dropdown-item" href="javascript:;"> <span
-							class="badge bg-red pull-right">50%</span> <span>Settings</span>
-						</a> <a class="dropdown-item" href="javascript:;">Help</a> <a
+						<a class="dropdown-item" href="javascript:;"> 내 정보</a> 
+						<a
 							class="dropdown-item" href="login.html"><i
-							class="fa fa-sign-out pull-right"></i> Log Out</a>
+							class="fa fa-sign-out pull-right"></i>로그 아웃</a>
 					</div>
 				</li>
 
