--- a/project_layout/src/main/resources/templates/fragments/leftmenu.html
+++ b/project_layout/src/main/resources/templates/fragments/leftmenu.html
@@ -30,106 +30,67 @@
 			<div class="menu_section">
 				<h3>General</h3>
 				<ul class="nav side-menu">
-					<li><a><i class="fa fa-home"></i> Home <span
+					<li><a><i class="fa fa-home"></i> #회원관리 <span
 							class="fa fa-chevron-down"></span></a>
 						<ul class="nav child_menu">
-							<li><a href="index.html">Dashboard</a></li>
-							<li><a href="index2.html">Dashboard2</a></li>
-							<li><a href="index3.html">Dashboard3</a></li>
+							<li><a href="index.html"> #회원 등록</a></li>
+							<li><a href="index.html"> #회원 목록 조회</a></li>
+							<li><a href="index2.html">#회원 등급 관리</a></li>
 						</ul></li>
-					<li><a><i class="fa fa-edit"></i> Forms <span
+					<li><a><i class="fa fa-edit"></i> #업체 관리 <span
 							class="fa fa-chevron-down"></span></a>
 						<ul class="nav child_menu">
-							<li><a href="form.html">General Form</a></li>
-							<li><a href="form_advanced.html">Advanced Components</a></li>
-							<li><a href="form_validation.html">Form Validation</a></li>
-							<li><a href="form_wizards.html">Form Wizard</a></li>
-							<li><a href="form_upload.html">Form Upload</a></li>
-							<li><a href="form_buttons.html">Form Buttons</a></li>
+							<li><a href="form.html">#전체 리뷰 관리 (관)</a></li>
+							<li><a href="form_advanced.html">#내 매장 리뷰 (관?, 판)</a></li>
+							<li><a href="form_validation.html">#업체 등록</a></li>
+							<li><a href="form_validation.html">#업체 목록</a></li>
+							<li><a href="form_wizards.html">#업체 목록 (공간 승인 대기)</a></li>
+							<li><a href="form_upload.html">#업체 목록 (공간 승인 완료)</a></li>
+							<li><a href="form_buttons.html">#장비 등록</a></li>
+							<li><a href="form_buttons.html">#장비 목록</a></li>
+							<li><a href="form_buttons.html">#장비 구입 목록</a></li>
+							<li><a href="form_buttons.html">#장비 파기 목록</a></li>
+							<li><a href="form_buttons.html">#장비 수리 목록</a></li>
+							<li><a href="form_buttons.html">#장비 수량 목록</a></li>
 						</ul></li>
-					<li><a><i class="fa fa-desktop"></i> UI Elements <span
+					<li><a><i class="fa fa-desktop"></i> #예약 관리 <span
 							class="fa fa-chevron-down"></span></a>
 						<ul class="nav child_menu">
-							<li><a href="general_elements.html">General Elements</a></li>
-							<li><a href="media_gallery.html">Media Gallery</a></li>
-							<li><a href="typography.html">Typography</a></li>
-							<li><a href="icons.html">Icons</a></li>
-							<li><a href="glyphicons.html">Glyphicons</a></li>
-							<li><a href="widgets.html">Widgets</a></li>
-							<li><a href="invoice.html">Invoice</a></li>
-							<li><a href="inbox.html">Inbox</a></li>
-							<li><a href="calendar.html">Calendar</a></li>
+							<li><a href="general_elements.html">#예약 등록</a></li>
+							<li><a href="general_elements.html">#예약 목록 조회</a></li>
+							<li><a href="general_elements.html">#예약 취소 목록 조회</a></li>
 						</ul></li>
-					<li><a><i class="fa fa-table"></i> Tables <span
+					<li><a><i class="fa fa-table"></i> #게시판 관리 <span
 							class="fa fa-chevron-down"></span></a>
 						<ul class="nav child_menu">
-							<li><a href="tables.html">Tables</a></li>
-							<li><a href="tables_dynamic.html">Table Dynamic</a></li>
+							<li><a href="tables.html">#게시판 리스트</a></li>
+							<li><a href="tables_dynamic.html">#게시글 관리</a></li>
+							<li><a href="tables_dynamic.html">#FAQ 관리</a></li>
 						</ul></li>
-					<li><a><i class="fa fa-bar-chart-o"></i> Data Presentation
+					<li><a><i class="fa fa-bar-chart-o"></i> #정산
 							<span class="fa fa-chevron-down"></span></a>
 						<ul class="nav child_menu">
-							<li><a href="chartjs.html">Chart JS</a></li>
-							<li><a href="chartjs2.html">Chart JS2</a></li>
-							<li><a href="morisjs.html">Moris JS</a></li>
-							<li><a href="echarts.html">ECharts</a></li>
-							<li><a href="other_charts.html">Other Charts</a></li>
+							<li><a href="chartjs.html">#관리자 정산 조회</a></li>
+							<li><a href="chartjs2.html">#판매자 정산 조회</a></li>
+							<li><a href="chartjs2.html">#결제 내역 조회</a></li>
+							<li><a href="chartjs2.html">#환불 내역 조회</a></li>
+							<li><a href="chartjs2.html">#마일리지 사용 내역 조회</a></li>
 						</ul></li>
-					<li><a><i class="fa fa-clone"></i>Layouts <span
+					<li><a><i class="fa fa-clone"></i>#통계 <span
 							class="fa fa-chevron-down"></span></a>
 						<ul class="nav child_menu">
-							<li><a href="fixed_sidebar.html">Fixed Sidebar</a></li>
-							<li><a href="fixed_footer.html">Fixed Footer</a></li>
+							<li><a href="fixed_sidebar.html">#접속 통계 (관) (OS별, 시간대별, 연령대별)</a></li>
+							<li><a href="fixed_footer.html">#구매 통계 (판) (공간별, 연령대별, 직업별)</a></li>
 						</ul></li>
+					<li><a><i class="fa fa-bar-chart-o"></i> #프로모션
+						<span class="fa fa-chevron-down"></span></a>
+					<ul class="nav child_menu">
+						<li><a href="morisjs.html">#메인 상품 진열</a></li>
+						<li><a href="echarts.html">#추천 상품 진열</a></li>
+					</ul></li>
 				</ul>
 			</div>
-			<div class="menu_section">
-				<h3>Live On</h3>
-				<ul class="nav side-menu">
-					<li><a><i class="fa fa-bug"></i> Additional Pages <span
-							class="fa fa-chevron-down"></span></a>
-						<ul class="nav child_menu">
-							<li><a href="e_commerce.html">E-commerce</a></li>
-							<li><a href="projects.html">Projects</a></li>
-							<li><a href="project_detail.html">Project Detail</a></li>
-							<li><a href="contacts.html">Contacts</a></li>
-							<li><a href="profile.html">Profile</a></li>
-						</ul></li>
-					<li><a><i class="fa fa-windows"></i> Extras <span
-							class="fa fa-chevron-down"></span></a>
-						<ul class="nav child_menu">
-							<li><a href="page_403.html">403 Error</a></li>
-							<li><a href="page_404.html">404 Error</a></li>
-							<li><a href="page_500.html">500 Error</a></li>
-							<li><a href="plain_page.html">Plain Page</a></li>
-							<li><a href="login.html">Login Page</a></li>
-							<li><a href="pricing_tables.html">Pricing Tables</a></li>
-						</ul></li>
-					<li><a><i class="fa fa-sitemap"></i> Multilevel Menu <span
-							class="fa fa-chevron-down"></span></a>
-						<ul class="nav child_menu">
-							<li><a href="#level1_1">Level One</a> <li><a>Level One<span class="fa fa-chevron-down"></span></a>
-                          <ul class="nav child_menu">
-                            <li class="sub_menu"><a
-										href="level2.html">Level Two</a>
-                            </li>
-                            <li><a href="#level2_1">Level Two</a>
-                            </li>
-                            <li><a href="#level2_2">Level Two</a>
-                            </li>
-                          </ul>
-                        </li>
-                        <li><a href="#level1_2">Level One</a>
-                        </li>
-                    </ul>
-                  </li>                  
-                  <li><a href="javascript:void(0)"><i
-							class="fa fa-laptop"></i> Landing Page <span
-							class="label label-success pull-right">Coming Soon</span></a></li>
-                </ul>
-              </div>
-
-            </div>
+         </div>
             <!-- /sidebar menu -->
 
             <!-- /menu footer buttons -->
