메뉴 수정 1차 - 광현

--- a/project_layout/src/main/resources/templates/fragments/leftmenu.html
+++ b/project_layout/src/main/resources/templates/fragments/leftmenu.html
@@ -30,6 +30,8 @@
 			<div class="menu_section">
 				<h3>General</h3>
 				<ul class="nav side-menu">
+				
+				
 					<li><a><i class="fa fa-home"></i> #회원관리 <span
 							class="fa fa-chevron-down"></span></a>
 						<ul class="nav child_menu">
@@ -37,6 +39,8 @@
 							<li><a href="index.html"> #회원 목록 조회</a></li>
 							<li><a href="index2.html">#회원 등급 관리</a></li>
 						</ul></li>
+						
+						
 					<li><a><i class="fa fa-edit"></i> #업체 관리 <span
 							class="fa fa-chevron-down"></span></a>
 						<ul class="nav child_menu">
@@ -53,13 +57,17 @@
 							<li><a href="form_buttons.html">#장비 수리 목록</a></li>
 							<li><a href="form_buttons.html">#장비 수량 목록</a></li>
 						</ul></li>
+						
+						
 					<li><a><i class="fa fa-desktop"></i> #예약 관리 <span
 							class="fa fa-chevron-down"></span></a>
 						<ul class="nav child_menu">
-							<li><a href="general_elements.html">#예약 등록</a></li>
-							<li><a href="general_elements.html">#예약 목록 조회</a></li>
-							<li><a href="general_elements.html">#예약 취소 목록 조회</a></li>
+							<li><a href="/rsvInsert">#예약 등록</a></li>
+							<li><a href="/rsvList">#예약 목록 조회</a></li>
+							<li><a href="/rsvCancelList">#예약 취소 목록 조회</a></li>
 						</ul></li>
+						
+						
 					<li><a><i class="fa fa-table"></i> #게시판 관리 <span
 							class="fa fa-chevron-down"></span></a>
 						<ul class="nav child_menu">
@@ -67,6 +75,8 @@
 							<li><a href="tables_dynamic.html">#게시글 관리</a></li>
 							<li><a href="tables_dynamic.html">#FAQ 관리</a></li>
 						</ul></li>
+						
+						
 					<li><a><i class="fa fa-bar-chart-o"></i> #정산
 							<span class="fa fa-chevron-down"></span></a>
 						<ul class="nav child_menu">
@@ -76,18 +86,24 @@
 							<li><a href="chartjs2.html">#환불 내역 조회</a></li>
 							<li><a href="chartjs2.html">#마일리지 사용 내역 조회</a></li>
 						</ul></li>
+						
+						
 					<li><a><i class="fa fa-clone"></i>#통계 <span
 							class="fa fa-chevron-down"></span></a>
 						<ul class="nav child_menu">
 							<li><a href="fixed_sidebar.html">#접속 통계 (관) (OS별, 시간대별, 연령대별)</a></li>
 							<li><a href="fixed_footer.html">#구매 통계 (판) (공간별, 연령대별, 직업별)</a></li>
 						</ul></li>
+						
+						
 					<li><a><i class="fa fa-bar-chart-o"></i> #프로모션
 						<span class="fa fa-chevron-down"></span></a>
 					<ul class="nav child_menu">
 						<li><a href="morisjs.html">#메인 상품 진열</a></li>
 						<li><a href="echarts.html">#추천 상품 진열</a></li>
 					</ul></li>
+					
+					
 				</ul>
 			</div>
          </div>
