--- a/project_layout/src/main/resources/templates/fragments/leftmenu.html
+++ b/project_layout/src/main/resources/templates/fragments/leftmenu.html
@@ -3,9 +3,10 @@
 <!-- Begin Left menu -->
 <div class="col-md-3 left_col" th:fragment="leftMenuFragment">
 	<div class="left_col scroll-view">
-		<div class="navbar nav_title" style="border: 0;">
-			<a href="index.html" class="site_title"><i class="fa fa-paw"></i>
-				<span>Gentelella Alela!</span></a>
+		<div class="navbar nav_title" style="border: 0; text-align: center;">
+			<a href="index.html" class="site_title">
+			<img src="imges/W-logo.gif" alt="로고" style="height: 50px;"/>
+				</a>
 		</div>
 
 		<div class="clearfix"></div>
