--- a/project_layout/src/main/resources/templates/statistic/statisticEx.html
+++ b/project_layout/src/main/resources/templates/statistic/statisticEx.html
@@ -52,8 +52,8 @@
 						data-toggle="dropdown" role="button" aria-expanded="false"><i
 							class="fa fa-wrench"></i></a>
 						<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-							<a class="dropdown-item" href="#">Settings 1</a> <a
-								class="dropdown-item" href="#">Settings 2</a>
+							<a class="dropdown-item" href="#">Settings 1</a>
+							<a class="dropdown-item" href="#">Settings 2</a>
 						</div></li>
 					<li><a class="close-link"><i class="fa fa-close"></i></a></li>
 				</ul>
