메뉴수정 -하영

--- a/project_layout/src/main/resources/templates/fragments/leftmenu.html
+++ b/project_layout/src/main/resources/templates/fragments/leftmenu.html
@@ -45,8 +45,8 @@
 					<li><a><i class="fa fa-edit"></i> #업체 관리 <span
 							class="fa fa-chevron-down"></span></a>
 						<ul class="nav child_menu">
-							<li><a href="form.html">#전체 리뷰 관리 (관)</a></li>
-							<li><a href="form_advanced.html">#내 매장 리뷰 (관?, 판)</a></li>
+							<li><a href="reviewAll">#전체 리뷰 관리 (관)</a></li>
+							<li><a href="reviewMy">#내 매장 리뷰 (관?, 판)</a></li>
 							<li><a href="form_validation.html">#업체 등록</a></li>
 							<li><a href="form_validation.html">#업체 목록</a></li>
 							<li><a href="form_wizards.html">#업체 목록 (공간 승인 대기)</a></li>
@@ -81,8 +81,8 @@
 					<li><a><i class="fa fa-bar-chart-o"></i> #정산
 							<span class="fa fa-chevron-down"></span></a>
 						<ul class="nav child_menu">
-							<li><a href="chartjs.html">#관리자 정산 조회</a></li>
-							<li><a href="chartjs2.html">#판매자 정산 조회</a></li>
+							<li><a href="/adminCalc">#관리자 정산 조회</a></li>
+							<li><a href="/sellerCalc">#판매자 정산 조회</a></li>
 							<li><a href="chartjs2.html">#결제 내역 조회</a></li>
 							<li><a href="chartjs2.html">#환불 내역 조회</a></li>
 							<li><a href="chartjs2.html">#마일리지 사용 내역 조회</a></li>
@@ -92,8 +92,8 @@
 					<li><a><i class="fa fa-clone"></i>#통계 <span
 							class="fa fa-chevron-down"></span></a>
 						<ul class="nav child_menu">
-							<li><a href="fixed_sidebar.html">#접속 통계 (관) (OS별, 시간대별, 연령대별)</a></li>
-							<li><a href="fixed_footer.html">#구매 통계 (판) (공간별, 연령대별, 직업별)</a></li>
+							<li><a href="/accessStat">#접속 통계 (관) (OS별, 시간대별, 연령대별)</a></li>
+							<li><a href="/buyStat">#구매 통계 (판) (공간별, 연령대별, 직업별)</a></li>
 						</ul></li>
 						
 						
