--- a/project_layout/src/main/resources/templates/fragments/leftmenu.html
+++ b/project_layout/src/main/resources/templates/fragments/leftmenu.html
@@ -36,27 +36,26 @@
 					<li><a><i class="fa fa-home"></i> #회원관리 <span
 							class="fa fa-chevron-down"></span></a>
 						<ul class="nav child_menu">
-							<li><a href="index.html"> #회원 등록</a></li>
-							<li><a href="index.html"> #회원 목록 조회</a></li>
-							<li><a href="index2.html">#회원 등급 관리</a></li>
+							<li><a href="/addUser"> #회원 등록</a></li>
+							<li><a href="/userList"> #회원 목록 조회</a></li>
+							<li><a href="/userLevel">#회원 등급 관리</a></li>
 						</ul></li>
 						
 						
 					<li><a><i class="fa fa-edit"></i> #업체 관리 <span
 							class="fa fa-chevron-down"></span></a>
 						<ul class="nav child_menu">
-							<li><a href="reviewAll">#전체 리뷰 관리 (관)</a></li>
-							<li><a href="reviewMy">#내 매장 리뷰 (관?, 판)</a></li>
-							<li><a href="form_validation.html">#업체 등록</a></li>
-							<li><a href="form_validation.html">#업체 목록</a></li>
-							<li><a href="form_wizards.html">#업체 목록 (공간 승인 대기)</a></li>
-							<li><a href="form_upload.html">#업체 목록 (공간 승인 완료)</a></li>
-							<li><a href="form_buttons.html">#장비 등록</a></li>
-							<li><a href="form_buttons.html">#장비 목록</a></li>
-							<li><a href="form_buttons.html">#장비 구입 목록</a></li>
-							<li><a href="form_buttons.html">#장비 파기 목록</a></li>
-							<li><a href="form_buttons.html">#장비 수리 목록</a></li>
-							<li><a href="form_buttons.html">#장비 수량 목록</a></li>
+							<li><a href="/reviewAll">#전체 리뷰 관리 (관)</a></li>
+							<li><a href="/reviewMy">#내 매장 리뷰 (관?, 판)</a></li>
+							<li><a href="/addStore">#업체 등록</a></li>
+							<li><a href="/storeListReady">#업체 목록 (공간 승인 대기)</a></li>
+							<li><a href="/storeListOK">#업체 목록 (공간 승인 완료)</a></li>
+							<li><a href="/addItem">#장비 등록</a></li>
+							<li><a href="/itemList">#장비 목록</a></li>
+							<li><a href="/itemBuyList">#장비 구입 목록</a></li>
+							<li><a href="/itemDeleteList">#장비 파기 목록</a></li>
+							<li><a href="/itemRepairList">#장비 수리 목록</a></li>
+							<li><a href="/itemCountList">#장비 수량 목록</a></li>
 						</ul></li>
 						
 						
