--- a/project_layout/src/main/resources/templates/fragments/leftmenu.html
+++ b/project_layout/src/main/resources/templates/fragments/leftmenu.html
@@ -45,8 +45,8 @@
 					<li><a><i class="fa fa-edit"></i> #업체 관리 <span
 							class="fa fa-chevron-down"></span></a>
 						<ul class="nav child_menu">
-							<li><a href="reviewAll">#전체 리뷰 관리 (관)</a></li>
-							<li><a href="reviewMy">#내 매장 리뷰 (관?, 판)</a></li>
+							<li><a href="/reviewAll">#전체 리뷰 관리 (관)</a></li>
+							<li><a href="/reviewMy">#내 매장 리뷰 (관?, 판)</a></li>
 							<li><a href="form_validation.html">#업체 등록</a></li>
 							<li><a href="form_validation.html">#업체 목록</a></li>
 							<li><a href="form_wizards.html">#업체 목록 (공간 승인 대기)</a></li>
