구매자 페이지 css - 채현

--- a/project_layout/src/main/resources/static/css/bootstrap/css/main.css
+++ b/project_layout/src/main/resources/static/css/bootstrap/css/main.css
@@ -2690,6 +2690,7 @@
 			margin-top: -5px;
 			text-decoration: none;
 			display: inline-block;
+			height: 80px;
 		}
 
 		#header nav {
@@ -3155,7 +3156,7 @@
 		}
 
 		#footer ul li {
-			font-size: 0.5em;
+			font-size: 0.7em;
 			padding: 0 2em;
 		}
 
