--- a/project_layout/src/main/resources/templates/fragments/main/header.html
+++ b/project_layout/src/main/resources/templates/fragments/main/header.html
@@ -8,7 +8,7 @@
 
 
 			<div class="nav_bar">
-				<img src="imges/B-logo.gif" alt="logo" class="nav_logo " />
+				<img src="imges/B-logo.gif" alt="logo" class="logo " />
 				
 				
 				
