--- a/project_layout/src/main/resources/templates/payment/paymentSearch.html
+++ b/project_layout/src/main/resources/templates/payment/paymentSearch.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http//www.ultraq.net.nz/thymeleaf/Layout"
-	layout:decorate="@{layout/whiteDefault}">
+	layout:decorate="@{layout/default}">
 <th:block layout:fragment="customCss">
 <th:block layout:fragment="customTitle">
 	<title th:text="${title}"></title>
