--- a/project_layout/src/main/resources/templates/point/pointSearch.html
+++ b/project_layout/src/main/resources/templates/point/pointSearch.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http//www.ultraq.net.nz/thymeleaf/Layout"
-	layout:decorate="@{layout/whiteDefault}">
-<th:block layout:fragment="customCss">
+	layout:decorate="@{layout/default}">
 <th:block layout:fragment="customTitle">
 	<title th:text="${title}"></title>
 </th:block>
